client/src/Pages/Main/MainPage.module.css
.wrapper {
  display: flex;
  justify-content: space-between;
  gap: 0 25px;
  flex-wrap: wrap;
  min-height: calc(100vh - 60px);
  margin-bottom: 15px;
}
.title__info {
  font-weight: 700;
  font-size: 20px;
  letter-spacing: 0.03em;
  padding-bottom: 10px;
}
.title__notFound {
  font-style: italic;
  font-weight: 700;
  font-size: 20px;
  letter-spacing: 0.03em;
  color: var(--color-blue-2);
  padding-bottom: 20px;
}
.wrapper__preview {
  flex: 1 1 800px;
  display: flex;
  flex-direction: column;
  gap: 20px;
  margin-bottom: 20px;
}
.wrapper__info {
  flex: 0 1 350px;
}
.sidebar {
  display: flex;
  flex-direction: column;
  gap: 15px;
}

@media screen and (max-width: 576px) {
  .title__info {
    display: none;
  }
  .spacer__donate {
    order: -1;
  }
  .topTeamContainer {
    order: -2;
  }
  .wrapper__info {
    flex: 1 1 auto;
  }
  .wrapper__preview {
    gap: 15px;
    margin-bottom: 0;
  }
}

